unpackaged/main/default/objects/litify_time__lit_Time_User_Grant__c/litify_time__lit_Time_User_Grant__c.object-meta.xml
<CustomObject>
    <description>Used to configure Litify Time Tracking. PLEASE ONLY CONFIGURE THROUGH TIME TRACKING INTERFACE FEATURES.</description>
    <label>Time User Grant</label>
    <nameField>
        <label>Time User Grant Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Time User Grants</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>