unpackaged/main/default/objects/litify_time__lit_Time_User_Grant__c/fields/litify_time__lit_AutoNumber__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_AutoNumber__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>AutoNumber</label>
    <type>AutoNumber</type>
</CustomField>