unpackaged/main/default/objects/litify_time__lit_Time_User_Grant__c/fields/litify_time__lit_Rates_Access__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Rates_Access__c</fullName>
    <label>Rates Access</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>