unpackaged/main/default/objects/litify_time__lit_Time_User_Grant__c/fields/litify_time__lit_Receiving_Access__c.field-meta.xml
<CustomField>
    <fullName>litify_time__lit_Receiving_Access__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Receiving Access</label>
    <referenceTo>User</referenceTo>
    <relationshipName>lit_Time_Receiving_Access</relationshipName>
    <type>Lookup</type>
</CustomField>